Added vep download module to the workflow

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -71,6 +71,18 @@ process {
         ext.args = { "--output-filename=${meta.id}.exomiser" }
     }
 
+    withName: ENSEMBLVEP_DOWNLOAD {
+        // Using the conda container as the official one from esemblorg does not have the download_vep function used in nf-core. 
+        container = 'quay.io/biocontainers/ensembl-vep:111.0--pl5321h2a3209d_0' 
+        ext.when  = { params.tools && (params.tools.split(',').contains('vep')) }
+        ext.args  = '--AUTO c --CONVERT --NO_BIOPERL --NO_HTSLIB --NO_TEST --NO_UPDATE'
+        ext.prefix  = { "${params.vep_cache_version}_${params.vep_genome}" }
+        publishDir  = [
+            mode: params.publish_dir_mode,
+            path: { params.outdir_cache ? "${params.outdir_cache}/": "${params.outdir}/cache/" }
+        ]
+    }
+
     withName: ENSEMBLVEP_VEP {
         container = 'ensemblorg/ensembl-vep:release_111.0' //sticking to v111 for now, but we should update this
         def args_list =  [
