--- a/nextflow.config
+++ b/nextflow.config
@@ -26,6 +26,8 @@ params {
     vep_cache = null
     vep_cache_version = null
     vep_genome = null
+    download_cache = false
+    outdir_cache     = null
     exomiser_genome  = null
     exomiser_data_dir = null
     exomiser_data_version = null
@@ -44,15 +46,17 @@ params {
     exclude_mnps = true
     TSfilterSNP = '99'
     TSfilterINDEL = '99'
-    hardFilters = [[name: 'QD2', expression: 'QD < 2.0'],
-		   [name: 'QD1', expression: 'QD < 1.0'],
-                   [name: 'QUAL30', expression: 'QUAL < 30.0'],
-                   [name: 'SOR3', expression: 'SOR > 3.0'],
-                   [name: 'FS60', expression: 'FS > 60.0'],
-                   [name: 'MQ40', expression: 'MQ < 40.0'],
-                   [name: 'MQRankSum-12.5', expression: 'MQRankSum < -12.5'],
-                   [name: 'ReadPosRankSum-8', expression: 'ReadPosRankSum < -8.0']]
-    
+    hardFilters = [
+        [name: 'QD2', expression: 'QD < 2.0'],
+        [name: 'QD1', expression: 'QD < 1.0'],
+        [name: 'QUAL30', expression: 'QUAL < 30.0'],
+        [name: 'SOR3', expression: 'SOR > 3.0'],
+        [name: 'FS60', expression: 'FS > 60.0'],
+        [name: 'MQ40', expression: 'MQ < 40.0'],
+        [name: 'MQRankSum-12.5', expression: 'MQRankSum < -12.5'],
+        [name: 'ReadPosRankSum-8', expression: 'ReadPosRankSum < -8.0']
+    ]
+
 
     allow_old_gatk_data = false
 	
@@ -270,7 +274,7 @@ process {
 		disk	=	{ check_max( 30.GB	* task.attempt, 'disk'		)	}
 		time	=	{ check_max( 10.h	* task.attempt, 'time'		)	}
 	}
-  	withName: 'GATK4_VARIANTFILTRATION' {
+	withName: 'GATK4_VARIANTFILTRATION' {
 		errorStrategy = 'retry'
 		maxRetries = 2
 		cpus	=	{ check_max( 2		* task.attempt, 'cpus'		) 	}
@@ -286,6 +290,14 @@ process {
 		disk	=	{ check_max( 30.GB	* task.attempt, 'disk'		)	}
 		time	=	{ check_max( 10.h	* task.attempt, 'time'		)	}
 	}
+	withName: 'ENSEMBLVEP_DOWNLOAD' {
+		errorStrategy = 'retry'
+		maxRetries = 2
+		cpus	=	{ check_max( 4 		* task.attempt, 'cpus'		)	}
+		memory	=	{ check_max( 36.GB	* task.attempt, 'memory'	)	}
+		disk	=	{ check_max( 140.GB	* task.attempt, 'disk'		)	}
+		time	=	{ check_max( 8.h 	* task.attempt, 'time'		)	}
+	}
 	withName: 'ENSEMBLVEP_VEP' {
 		errorStrategy = 'retry'
 		maxRetries = 2
@@ -294,7 +306,7 @@ process {
 		disk	=	{ check_max( 80.GB	* task.attempt, 'disk'		)	}
 		time	=	{ check_max( 10.h 	* task.attempt, 'time'		)	}
 	}
-    withName: 'EXOMISER' {
+	withName: 'EXOMISER' {
         errorStrategy = 'retry'
 		maxRetries = 2
 		cpus	=	{ check_max( 6 		* task.attempt, 'cpus'		)	}
@@ -302,7 +314,7 @@ process {
 		disk	=	{ check_max( 150.GB	* task.attempt, 'disk'		)	}
 		time	=	{ check_max( 10.h 	* task.attempt, 'time'		)	}
     }
-    withName: 'writemeta' {
+	withName: 'writemeta' {
         container = 'ubuntu:24.10'	
     }
 }
