--- a/conf/modules.config
+++ b/conf/modules.config
@@ -62,6 +62,24 @@ process {
         ext.args = {filters.collect{ "--filter \"${it.expression}\" --filter-name \"${it.name}\"" }.join(" ")}
     }
 
+    withName: GATK4_VARIANTRECALIBRATOR_SNP {
+        container = 'broadinstitute/gatk:4.5.0.0'
+        ext.prefix = {meta.id + ".snp"} //TODO: check if this is correct
+
+        //TODO: make this configurable
+        def tranches = ["100.0", "99.95", "99.9", "99.8", "99.6", "99.5", "99.4", "99.3", "99.0"].collect{"-tranche $it"}.join(' ')
+        def annotationValues = ["QD","MQRankSum","ReadPosRankSum","FS","MQ","SOR","DP"].collect{"-an $it"}.join(' ')
+        def args_list = [
+            tranches,
+            annotationValues,
+            "--trust-all-polymorphic",
+            "--max-gaussians 6",
+            "--mode SNP"
+        ]
+        ext.args = args_list.join(" ")
+    }
+
+
     withName: EXOMISER { 
         container = 'ferlabcrsj/exomiser:2.4.1'
         publishDir = new_publish_dir([
