--- a/nextflow.config
+++ b/nextflow.config
@@ -56,7 +56,8 @@ params {
         [name: 'MQRankSum-12.5', expression: 'MQRankSum < -12.5'],
         [name: 'ReadPosRankSum-8', expression: 'ReadPosRankSum < -8.0']
     ]
-
+    
+    vqsr_snp_resources = null
 
     allow_old_gatk_data = false
 	
