--- a/conf/test.config
+++ b/conf/test.config
@@ -43,14 +43,16 @@ params {
     vep_genome = "GRCh38"
 
     // Filters for hard filtering
-    hardFilters = [[name: 'QD2', expression: 'QD < 2.0'],
-		           [name: 'QD1', expression: 'QD < 1.0'],
-                   [name: 'QUAL30', expression: 'QUAL < 30.0'],
-                   [name: 'SOR3', expression: 'SOR > 3.0'],
-                   [name: 'FS60', expression: 'FS > 60.0'],
-                   [name: 'MQ40', expression: 'MQ < 40.0'],
-                   [name: 'MQRankSum-12.5', expression: 'MQRankSum < -12.5'],
-                   [name: 'ReadPosRankSum-8', expression: 'ReadPosRankSum < -8.0']]
+    hardFilters = [
+        [name: 'QD2', expression: 'QD < 2.0'],
+        [name: 'QD1', expression: 'QD < 1.0'],
+        [name: 'QUAL30', expression: 'QUAL < 30.0'],
+        [name: 'SOR3', expression: 'SOR > 3.0'],
+        [name: 'FS60', expression: 'FS > 60.0'],
+        [name: 'MQ40', expression: 'MQ < 40.0'],
+        [name: 'MQRankSum-12.5', expression: 'MQRankSum < -12.5'],
+        [name: 'ReadPosRankSum-8', expression: 'ReadPosRankSum < -8.0']
+    ]
     
     tools = "vep,exomiser"
 
