refactor: BIOINFO-30 replace local snp vqsr recalibration module by nf-core module

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -62,6 +62,22 @@ process {
         ext.args = {filters.collect{ "--filter \"${it.expression}\" --filter-name \"${it.name}\"" }.join(" ")}
     }
 
+    withName: GATK4_VARIANTRECALIBRATOR_SNP {
+        container = 'broadinstitute/gatk:4.5.0.0'
+        ext.prefix = {meta.id + ".snp.vqsr"}
+
+        def tranches = params.vqsr_snp_tranches.collect{"-tranche $it"}.join(' ')
+        def annotationValues = params.vqsr_snp_annotations.collect{"-an $it"}.join(' ')
+        def args_list = [
+            tranches,
+            annotationValues,
+            "--trust-all-polymorphic",
+            "--max-gaussians 6",
+            "--mode SNP"
+        ]
+        ext.args = args_list.join(" ")
+    }
+
     withName: EXOMISER { 
         container = 'ferlabcrsj/exomiser:2.4.1'
         publishDir = new_publish_dir([
