--- a/nextflow.config
+++ b/nextflow.config
@@ -57,6 +57,10 @@ params {
         [name: 'ReadPosRankSum-8', expression: 'ReadPosRankSum < -8.0']
     ]
 
+    // VQSR parameters
+    vqsr_snp_tranches = ["100.0", "99.95", "99.9", "99.8", "99.6", "99.5", "99.4", "99.3", "99.0"]
+    vqsr_snp_annotations = ["QD","MQRankSum","ReadPosRankSum","FS","MQ","SOR","DP"]
+    vqsr_snp_resources = null  //We cannot define the default value here, as it depends on the broad parameter. It will be initialized in the VQSR workflow.
 
     allow_old_gatk_data = false
 	
