feat: CLIN-3410: update exomiser output folder and adjust splitMultiAllelics publishing
- Replace exomiser/results output folder with exomiser/.
- Avoid systematically publishing the output of the splitmultiallelics process.
- Add parameters to customize exomiser and vep publish locations
- Simplify the code for the default publish dir

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -10,21 +10,15 @@
 ----------------------------------------------------------------------------------------
 */
 
-
-def new_publish_dir(new_attributes=[:]) { 
-    def default_publish_dir = [
-        enabled: params.publish_all,
-        path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
-        mode: params.publish_dir_mode,
-        saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-    ]
-
-    return default_publish_dir + new_attributes
-}
+def default_publish_dir = [
+    path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
+    mode: params.publish_dir_mode,
+    saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+]
 
 process {
 
-    publishDir = new_publish_dir()
+    publishDir = params.publish_all? default_publish_dir : []
 
     withName: BCFTOOLS_VIEW {
         container = 'staphb/bcftools:1.20'
@@ -80,10 +74,11 @@ process {
 
     withName: EXOMISER { 
         container = 'ferlabcrsj/exomiser:2.4.1'
-        publishDir = new_publish_dir([
-            enabled: true,
-            pattern: 'results/*{vcf.gz,vcf.gz.tbi,tsv,json,html}'
-        ])
+        publishDir = [
+            path: { params.exomiser_outdir ?: "${params.outdir}/exomiser" },
+            pattern: '*{vcf.gz,vcf.gz.tbi,tsv,json,html}',
+            mode: params.publish_dir_mode,
+        ]
         ext.args = { "--output-filename=${meta.id}.exomiser" }
     }
 
@@ -121,7 +116,11 @@ process {
     }
 
     withName: '.*VCF_ANNOTATE_ENSEMBLVEP.*' {
-        publishDir = new_publish_dir([enabled: true, path: { "${params.outdir}/ensemblvep" }])
+        publishDir = [
+            path: { params.vep_outdir ?: "${params.outdir}/ensemblvep" },
+            publish_mode: params.publish_dir_mode,
+            pattern: '*{vcf.gz,vcf.gz.tbi}'
+        ]
     }
 
     withName: TABIX_TABIX {
@@ -130,6 +129,5 @@ process {
 
     withName: 'splitMultiAllelics' {
         container = 'staphb/bcftools:1.20'
-        publishDir = new_publish_dir([enabled: true])
     }
 }
