--- a/nextflow.config
+++ b/nextflow.config
@@ -26,6 +26,7 @@ params {
     vep_cache = null
     vep_cache_version = null
     vep_genome = null
+    vep_outdir = null
     download_cache = false
     outdir_cache     = null
     exomiser_genome  = null
@@ -41,6 +42,7 @@ params {
     exomiser_local_frequency_path = null
     exomiser_local_frequency_index_path = null
     exomiser_start_from_vep = false
+    exomiser_outdir = null
 
 	//Process-specific parameters
     exclude_mnps = true
