Feat: Add subworkflow create csv from channel

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,6 +23,7 @@ params {
     dbsnpFile = null
     dbsnpFileIndex = null
     tools = ""
+    step = "genotype" // options [genotype (default), annotate, exomiser]
     vep_cache = null
     vep_cache_version = null
     vep_genome = null
