Allow samplesheet from different steps.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -129,5 +129,11 @@ process {
 
     withName: 'splitMultiAllelics' {
         container = 'staphb/bcftools:1.20'
+        publishDir = [
+            enabled: params.save_genotyped || params.tools.isBlank(),
+            path: { "${params.outdir}/normalized_genotypes" },
+            publish_mode: params.publish_dir_mode,
+            pattern: '*{splitted.vcf.gz,splitted.vcf.gz.tbi}'
+        ]
     }
 }
