--- a/nextflow.config
+++ b/nextflow.config
@@ -12,6 +12,9 @@ params {
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
     input                      = null
+    step                       = 'genotype'
+    allow_intermediate_input   = true
+
     // References
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes/'
@@ -22,14 +25,9 @@ params {
     intervalsFile = null
     dbsnpFile = null
     dbsnpFileIndex = null
-    tools = ""
-    step = "genotype" // options [genotype (default), annotate, exomiser]
     vep_cache = null
     vep_cache_version = null
     vep_genome = null
-    vep_outdir = null
-    download_cache = false
-    outdir_cache     = null
     exomiser_genome  = null
     exomiser_data_dir = null
     exomiser_data_version = null
@@ -43,10 +41,19 @@ params {
     exomiser_local_frequency_path = null
     exomiser_local_frequency_index_path = null
     exomiser_start_from_vep = false
-    exomiser_outdir = null
+
+    // Execution options
+    tools           = ""
+    download_cache  = false
+    exclude_mnps    = true
+
+    // Output options
+	save_genotyped 	= false
+	vep_outdir		= null
+	outdir_cache	= null
+	exomiser_outdir	= null
 
 	//Process-specific parameters
-    exclude_mnps = true
     TSfilterSNP = '99'
     TSfilterINDEL = '99'
     hardFilters = [
