--- a/nextflow.config
+++ b/nextflow.config
@@ -45,6 +45,7 @@ params {
     // Execution options
     tools           = ""
     download_cache  = false
+    cache_species   = "homo_sapiens"
     exclude_mnps    = true
 
     // Output options
