style: BIOINFO-121 Address comments

--- a/nextflow.config
+++ b/nextflow.config
@@ -45,7 +45,7 @@ params {
     // Execution options
     tools           = ""
     download_cache  = false
-    cache_species   = "homo_sapiens"
+    download_cache_species   = "homo_sapiens"
     exclude_mnps    = true
 
     // Output options
